best-practices/require_probes/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../require_probes.yaml
assert:
- policy-assert.yaml
