best-practices/require_probes/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' require_probes.yaml | kubectl create -f -
