best-practices/require_probes/e2e/04-manifests.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: good-pods.yaml
  shouldFail: false
- file: good-podcontrollers.yaml
  shouldFail: false
- file: bad-pod-nothing.yaml
  shouldFail: true
- file: bad-pod-notall.yaml
  shouldFail: true
- file: bad-podcontrollers.yaml
  shouldFail: true
