best-practices/require_probes/e2e/05-pod-update.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: bad-pod-update.yaml
  shouldFail: true
