best-practices/require_probes/e2e/bad-pod-notall.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    ports:
    - containerPort: 8080
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  labels:
    app: myapp
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox
    image: busybox:1.35
    ports:
    - containerPort: 8080
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
